k8s/devtools-ns/mongo-express/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-express
  namespace: devtools-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-express
  template:
    metadata:
      labels:
        app: mongo-express
    spec:
      containers:
      - name: mongo-express
        image: mongo-express:1.0.0-alpha.4
        ports:
        - containerPort: 8081
          name: http
